welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
	for (i <- 1 to hauteur)
               ^Array1:27: error: not found: value marquer
marquer();
^